--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"devDependencies": {
 		"babel-jest": "19.0.0",
 		"babel-preset-react-native": "1.9.1",
+		"flow-bin": "0.37",
 		"jest": "19.0.0",
 		"react-test-renderer": "~15.4.0"
 	},
